# eda_car_listings

./: .gitignore  README.md  app.py  exploratory_data_analysis.ipynb  playground.ipynb  predict_price.ipynb  predict_price.py  predict_price_new.ipynb  pyproject.toml  requirements.txt  web_scraping.ipynb  web_scraping.py  web_scraping_v2.py  web_scraping_v3.py
data/: all_results_df.csv  audi_links.pkl  cleaned_data.csv  make_links.pkl  model_comparison_results.csv  new_short_make_links.json  playwright_Audi_listings.pkl  playwright_listings.pkl  playwright_make_links.pkl  processed_data.csv  raw_data.csv  raw_data_cast.csv  technical_data.pkl
deprecated/: exploratory_data_analysis.ipynb  predict_price.ipynb
