[project]
name = "eda-car-listings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio==4.7.0",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "attrs==24.2.0",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "bs4==0.0.2",
    "catboost~=1.2.7",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "executing==2.1.0",
    "fastjsonschema==2.21.1",
    "fonttools==4.55.3",
    "fqdn==1.5.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.30.0",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.11.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.4",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kiwisolver==1.4.8",
    "lxml==5.3.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.5",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.3.2",
    "notebook-shim==0.2.4",
    "numpy~=1.26.4",
    "outcome==1.3.0.post0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "playwright>=1.52.0",
    "playwright-stealth>=1.0.6",
    "plotly>=6.1.2",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.48",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pygments==2.18.0",
    "pyparsing==3.2.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==3.2.1",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.22.3",
    "ruff>=0.11.13",
    "scikit-learn~=1.6.1",
    "seaborn==0.13.2",
    "selenium==4.27.1",
    "selenium-stealth>=1.0.6",
    "send2trash==1.8.3",
    "setuptools==75.6.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "streamlit>=1.45.1",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trio==0.27.0",
    "trio-websocket==0.11.1",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webdriver-manager==4.0.2",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]
